--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <resources>
     <string name="app_name">ShopApp</string>
-    <string name="registration">Регистрация</string>
+    <string name="signUp">Регистрация</string>
     <string name="loginEnter">Введите логин</string>
     <string name="emailEnter">Введите электронную почту</string>
     <string name="passwordEnter">Введите пароль</string>
+    <string name="signIn">Войти в аккаунт</string>
+    <string name="catalogue">Catalogue</string>
+    <string name="history">History</string>
+    <string name="cart">Cart</string>
+    <string name="account">Account</string>
 </resources>
