--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="catalogue">Catalogue</string>
     <string name="history">History</string>
     <string name="cart">Cart</string>
-    <string name="account">Account</string>
+    <string name="profile">Profile</string>
 
     <string name="product_image">Изображение товара</string>
     <string name="currency_rub">₽</string>
