--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 
     <string name="product_image">Изображение товара</string>
     <string name="currency_rub">₽</string>
-    <string name="add_to_cart">В корзину</string>
+    <string name="addToCart">В корзину</string>
     <string name="showMore">Показать больше</string>
+    <string name="removeFromCart">Удалить из корзины</string>
 </resources>
